# podcast_downloader

./: .gitignore  Cargo.toml  README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
.cargo/: config.toml
docs/: architecture.md
examples/: feeds.example.toml
releases/: README.md
scripts/: build-tui-sidecar.mjs
src/: config_file.rs  lib.rs  logging.rs  main.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/app/: mod.rs
src/core/: mod.rs
src/db/: mod.rs
src/decoder/: mod.rs
src/discovery/: mod.rs
src/downloads/: mod.rs
src/feeds/: mod.rs
src/metadata/: mod.rs
src/retention/: mod.rs
src/tui/: helpers.rs  mod.rs  progress.rs
tests/: core_tests.rs  decoder_tests.rs  discovery_tests.rs  download_tests.rs  retention_tests.rs
tests/common/: mod.rs
tests/fixtures/: basic_atom.xml  basic_rss.xml
ui/: App.tsx  api.ts  progress.test.ts  progress.ts  search-view.test.tsx  styles.css  types.ts
ui/components/ui/: alert.tsx  badge.tsx  button.tsx  card.tsx  dialog.tsx  dropdown-menu.tsx  input.tsx  scroll-area.tsx  sheet.tsx  skeleton.tsx  tabs.tsx  tooltip.tsx
