[package]
name = "podcast_downloader"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
chrono = { version = "0.4", features = ["clock"] }
feed-rs = "2.3"
futures = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
sanitize-filename = "0.6"
serde = { version = "1", features = ["derive"] }
sha2 = "0.10"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite"] }
thiserror = "2"
tokio = { version = "1", features = ["fs", "macros", "process", "rt-multi-thread"] }
url = "2"
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
tempfile = "3"
wiremock = "0.6"

[profile.dev]
debug = 0

[profile.test]
debug = 0
