[package]
name = "podcast_downloader_desktop"
version = "0.1.0"
description = "Desktop frontend for Podcast Downloader"
authors = ["Podcast Downloader"]
license = "MIT"
repository = "https://github.com/PengHongyiNTU/podcast_downloader"
edition = "2024"

[lib]
name = "podcast_downloader_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "podcast_downloader_desktop"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2.4.0", features = [] }

[dependencies]
podcast_downloader = { path = ".." }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2.8.5", features = [] }
tokio = { version = "1", features = ["sync"] }

[dev-dependencies]
tempfile = "3"
